// Docs: https://dbml.dbdiagram.io/docs

Table users {
    user_id int [primary key, increment]
    name varchar(100) [unique, not null]
    email varchar(100) [unique, not null]
    bcrypt_password varchar(255) [not null]
    is_admin boolean [not null, default: false]
    is_editor boolean [not null, default: false]
    is_author boolean [not null, default: false]
}

Table sessions {
    session_id int [primary key, increment]
    user_id int
    token binary(255) [not null]
    expiry timestamp
}

Ref: sessions.user_id > users.user_id [delete: cascade]

Table posts {
    post_id int [primary key, increment]
    title varchar(255) [not null]
    content text [not null]
    author_id int [not null]
    published_at timestamp
    created_at timestamp [not null]
    updated_at timestamp [not null]
}

Ref: posts.author_id > users.user_id

Table pending_edits {
    post_id int [primary key, increment]
    title varchar(255) [not null]
    content text [not null]
}

Ref: pending_edits.post_id > posts.post_id [delete: cascade]

Table invite_tokens {
    token_id int [primary key, increment]
    token binary(255) [not null]
    author boolean [not null, default: false]
    editor boolean [not null, default: false]
    admin boolean [not null, default: false]
}
